<resources>
    <string name="app_name">MirrorDisplay</string>

    <string name="title_activity_mirror_display">MirrorDisplay</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="latitude_for_weather">Latitude for weather</string>
    <string name="longitude_for_weather">Longitude for weather</string>
    <string name="api_key_for_weather">OpenWeather API key for weather</string>
    <string name="start">Start</string>
    <string name="calendar_settings">Calendar settings</string>
    <string name="calendars_to_view">Calendars to view</string>
    <string name="weather_settings">Weather settings</string>
    <string name="rss_settings">RSS settings</string>
    <string name="rss_url">RSS url</string>
    <string name="number_of_feeds">Number of feeds</string>
    <string name="EMPTY_AGENDA">keine Termine vorhanden.</string>
    <string name="current_weather_icon">Current weather icon</string>
    <string name="uv_index">UV index</string>
    <string name="precipitation_weather">Precipitation</string>
    <string name="humidity_weather">Humidity</string>
    <string name="wind_speed_weather">Wind speed</string>
</resources>
